@@ -326,15 +326,13 @@ usb_lld_ctrl_error (struct usb_dev *dev)
   kl27z_ep_stall (ENDP0);
 }
 
-void
-usb_lld_ctrl_good (struct usb_dev *dev)
+int
+usb_lld_ctrl_ack (struct usb_dev *dev)
 {
-  if (dev->dev_req.len == 0)
-    {
-      /* Zero length packet for ACK.  */
-      dev->state = WAIT_STATUS_IN;
-      kl27z_prepare_ep0_in (&dev->dev_req, 0, DATA1);
-    }
+  /* Zero length packet for ACK.  */
+  dev->state = WAIT_STATUS_IN;
+  kl27z_prepare_ep0_in (&dev->dev_req, 0, DATA1);
+  return USB_EVENT_NONE;
 }
 
 
@@ -394,7 +392,7 @@ usb_lld_event_handler (struct usb_dev *dev)
       USB_CTRL1->ISTAT = USB_IS_STALL;
     }
 
-  return 0;
+  return USB_EVENT_NONE;
 }
 
 
@@ -502,7 +500,7 @@ std_get_status (struct usb_dev *dev)
 	  else /* Self-powered */
 	    status_info &= ~1;
 
-	  return usb_lld_reply_request (dev, &status_info, 2);
+	  return usb_lld_ctrl_send (dev, &status_info, 2);
 	}
     }
   else if (rcp == INTERFACE_RECIPIENT)
@@ -523,7 +521,7 @@ std_get_status (struct usb_dev *dev)
 	return -1;
 
       status_info = kl27z_ep_is_stall (n);
-      return usb_lld_reply_request (dev, &status_info, 2);
+      return usb_lld_ctrl_send (dev, &status_info, 2);
     }
 
   return -1;
@@ -624,7 +622,7 @@ std_set_address (struct usb_dev *dev)
 
   if (rcp == DEVICE_RECIPIENT && arg->len == 0 && arg->value <= 127
       && arg->index == 0 && dev->configuration == 0)
-    return USB_EVENT_NONE;
+    return usb_lld_ctrl_ack (dev);
 
   return -1;
 }
@@ -652,7 +650,7 @@ std_get_configuration (struct usb_dev *dev)
     return -1;
 
   if (rcp == DEVICE_RECIPIENT)
-    return usb_lld_reply_request (dev, &dev->configuration, 1);
+    return usb_lld_ctrl_send (dev, &dev->configuration, 1);
 
   return -1;
 }
@@ -735,14 +733,10 @@ handle_setup0 (struct usb_dev *dev)
 	default: handler = std_none;  break;
 	}
 
-      if ((r = (*handler) (dev)) <= 0)
+      if ((r = (*handler) (dev)) < 0)
 	{
-	  /* Handling finished in standard way.  */
-	  if (r == 0)
-	    usb_lld_ctrl_good (dev);
-	  else
-	    usb_lld_ctrl_error (dev);
-	  return 0;
+	  usb_lld_ctrl_error (dev);
+	  return USB_EVENT_NONE;
 	}
       else
 	return r;
@@ -835,7 +829,7 @@ handle_transaction (struct usb_dev *dev, uint8_t stat)
 	    {
 	      handle_out0 (dev, stat);
 	      USB_CTRL1->ISTAT = USB_IS_TOKDNE;
-	      return 0;
+	      return USB_EVENT_NONE;
 	    }
 	}
       else
@@ -959,7 +953,7 @@ usb_lld_current_configuration (struct usb_dev *dev)
 }
 
 int
-usb_lld_set_data_to_recv (struct usb_dev *dev, void *p, size_t len)
+usb_lld_ctrl_recv (struct usb_dev *dev, void *p, size_t len)
 {
   struct ctrl_data *data_p = &dev->ctrl_data;
   data_p->addr = (uint8_t *)p;
@@ -969,7 +963,7 @@ usb_lld_set_data_to_recv (struct usb_dev *dev, void *p, size_t len)
 
   kl27z_prepare_ep0_out (p, len, DATA1);
   dev->state = OUT_DATA;
-  return 0;
+  return USB_EVENT_NONE;
 }
 
 /*
@@ -979,7 +973,7 @@ usb_lld_set_data_to_recv (struct usb_dev *dev, void *p, size_t len)
  * BUFLEN: size of the data.
  */
 int
-usb_lld_reply_request (struct usb_dev *dev, const void *buf, size_t buflen)
+usb_lld_ctrl_send (struct usb_dev *dev, const void *buf, size_t buflen)
 {
   struct ctrl_data *data_p = &dev->ctrl_data;
   uint32_t len_asked = dev->dev_req.len;
@@ -1012,7 +1006,7 @@ usb_lld_reply_request (struct usb_dev *dev, const void *buf, size_t buflen)
   data_p->len -= len;
   data_p->addr += len;
 
-  return 0;
+  return USB_EVENT_NONE;
 }
 
 void
