@@ -6,8 +6,10 @@ NEWS - Noteworthy changes
   Released 2016-06-xx
 
 ** New USB API
-Since USB driver is included, it should be good one.  It used to be
-interrupt based API with callbacks.  Now, it's event driven API.
+Now, USB driver is included in Chopstx.  So, it should be good one.
+It used to be the code which was derived from interrupt driven API
+with callbacks.  It's changed to event driven API, so that a user can
+do as wish, beyond the restriction of callbacks.
 
 
 * Major changes in Chopstx 0.12
